--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -4,11 +4,12 @@ type: "charm"
 bases:
   - build-on:
     - name: "ubuntu"
-      channel: "20.04"
+      channel: "22.04"
     run-on:
     - name: "ubuntu"
-      channel: "20.04"
+      channel: "22.04"
 parts:
   charm:
     charm-python-packages:
+      - setuptools
       - charmhelpers
