--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,11 +5,11 @@
 # https://juju.is/docs/sdk/metadata-reference
 name: charm-openidc-test-fixture
 display-name: |
-  TEMPLATE-TODO: fill out a display name for the Charmcraft store
+  Keycloak OIDC Test charm
 description: |
-  TEMPLATE-TODO: fill out the charm's description
+  Keycloak OIDC Test charm
 summary: |
-  TEMPLATE-TODO: fill out the charm's summary
+  Keycloak OIDC Test charm
 
 # TEMPLATE-TODO: each container defined above must specify an oci-image resource
 resources:
