Add architecture to charmcraft.yaml

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -5,9 +5,11 @@ bases:
   - build-on:
     - name: "ubuntu"
       channel: "22.04"
+      architectures: [amd64]
     run-on:
     - name: "ubuntu"
       channel: "22.04"
+      architectures: [amd64]
 parts:
   charm:
     charm-python-packages:
