Add 'certificates' interface support.
When adding a relation to vault the charm will request certificates and
configure the identity provider to use them, the service will be
listening in the port 8443.

  juju add-relation vault openidc-test-fixture

The oidc-provider-metadata-url can be set using the following url:
https://<IP>:8443/realms/master/.well-known/openid-configuration

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -11,6 +11,10 @@ description: |
 summary: |
   Keycloak OIDC Test charm
 
+requires:
+  certificates:
+    interface: tls-certificates
+
 resources:
   dockerimg:
     type: file
